--- a/svg_practice/index.html
+++ b/svg_practice/index.html
@@ -4,14 +4,82 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>SVG practice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./styles/style.min.css" />
   </head>
 
   <body>
     <svg width="500" height="500">
-      <rect width="100" height="100" fill="#F44336" stroke="#8BC34A" stroke-width="10" x="5" y="5" />
+      <!-- Rectangle -->
+      <!-- <rect width="100" height="100" fill="#F44336" stroke="#8BC34A" stroke-width="10" x="5" y="5" /> -->
+      <!-- Circle -->
+      <!-- <circle r="100" cx="105" cy="105" fill="#9C27B0" stroke="#E91E83" stroke-width="10"></circle> -->
+      <!-- Elipse -->
+      <!-- <ellipse rx="200" ry="100" cx="205" cy="105" fill="#2196F3" stroke="#000" stroke-width="10"></ellipse> -->
+      <!-- Line -->
+      <!-- <line x1="25" y1="25" x2="200" y2="200" stroke="red" stroke-width="10"></line> -->
+
+      <!-- Polygons & Polylines -->
+      <!-- <polygon points="220,10 300,210 179,259 123,234" fill="black" stroke="red" stroke-width="10"></polygon> -->
+      <!-- <polyline points="220,10 300,210 179,259 123,234" stroke="red" stroke-width="10" fill="none"></polyline> -->
+      <!-- Paths -->
+      <!-- d is short for data, it uses commands. M for move, L for line-->
+      <!-- <path d="
+              M 96,100 
+              L 300,150 
+              L 300,350  
+              Q 10,300 100,100
+
+            " fill="none" stroke="#000" stroke-width="10"></path> -->
+      <!-- <path d="
+              m 96,100 
+              l 300,150 
+              l 300,350  
+              q 10,300 100,100
+
+            " fill="none" stroke="yellow" stroke-width="10"></path> -->
+
+      <!-- Text -->
+      <!-- <a xlink:href="https://google.com" target="_blank">
+        <text x="50" y="50" fill="red" font-size="30">
+          Hello World
+          <tspan x="50" y="200">Second Line</tspan>
+        </text>
+      </a> -->
+
+      <!-- Definitions, Groups and Markers -->
+      <!-- <defs>
+        <g id="rectangle">
+          <rect width="50" height="50"></rect>
+          <rect width="50" height="50" x="50" fill="blue"></rect>
+        </g>
+      </defs>
+
+      <use xlink:href="#rectangle" x="0" y="0"></use> -->
+
+      <!-- Text paths -->
+      <!-- <defs>
+        <path id="custom_text_path" d="
+                                      M 0,0
+                                      Q 0,100 150,100
+                                    "></path>
+
+      </defs>
+      <text x="10" y="100" stroke="black" font-size="30">
+        <textPath xlink:href="#custom_text_path">
+          Hello World
+        </textPath>
+      </text> -->
+
+
+      <!-- Clip paths -->
+      <defs>
+        <clipPath id="custom_clip_path">
+          <rect x="250" y="250" width="200" height="200"></rect>
+        </clipPath>
+      </defs>
+      <circle clip-path="url(#custom_clip_path)" cx="250" cy="250" r="200" fill="pink"></circle>
     </svg>
   </body>
 
