--- a/D3_scales/index.html
+++ b/D3_scales/index.html
@@ -10,7 +10,8 @@
   </head>
 
   <body>
-    <div class="chart"></div>
+    <div id="chart"></div>
+    <script src="https://d3js.org/d3.v4.js"></script>
     <script src="./js/app.js"></script>
   </body>
 
