Add bar chart links

--- a/home.html
+++ b/home.html
@@ -23,10 +23,10 @@
           <p class="card-text">D3 scatterplot practice using hardcoded dataset.</p>
         </div>
         <div class="card-body links">
-          <a href="./scatter_plot" class="card-link">
+          <a href="./scatter_plot" class="card-link" target="_blank">
             <i class="fa fa-link" aria-hidden="true"></i>
           </a>
-          <a href="https://github.com/juansalvatore/D3_practice/tree/master/scatter_plot" class="card-link">
+          <a href="https://github.com/juansalvatore/D3_practice/tree/master/scatter_plot" class="card-link" target="_blank">
             <i class="fa fa-github-alt" aria-hidden="true"></i>
           </a>
         </div>
@@ -38,10 +38,10 @@
           <p class="card-text">D3 bar chart practice using random dataset generated with a loop and math random.</p>
         </div>
         <div class="card-body links">
-          <a href="#" class="card-link">
+          <a href="./D3_bar_chart" class="card-link" target="_blank">
             <i class="fa fa-link" aria-hidden="true"></i>
           </a>
-          <a href="#" class="card-link">
+          <a href="https://github.com/juansalvatore/D3_practice/tree/master/D3_bar_chart" class="card-link" target="_blank">
             <i class="fa fa-github-alt" aria-hidden="true"></i>
           </a>
         </div>
