Create practice boilerplate

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <body>
     <div class="cards-container">
+
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="./img/scatter-plot.png" alt="scatter-plot">
         <div class="card-body">
@@ -31,6 +32,7 @@
           </a>
         </div>
       </div>
+
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="./img/bar-chart.png" alt="bar-chart">
         <div class="card-body">
@@ -46,7 +48,27 @@
           </a>
         </div>
       </div>
+
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="./img/practice.jpeg" alt="practice">
+        <div class="card-body">
+          <h5 class="card-title">Actual Practice</h5>
+          <p class="card-text">Last graph I've been doing for practice.</p>
+        </div>
+        <div class="card-body links">
+          <a href="./practice" class="card-link" target="_blank">
+            <i class="fa fa-link" aria-hidden="true"></i>
+          </a>
+          <a href="https://github.com/juansalvatore/D3_practice/tree/master/D3_bar_chart" class="card-link" target="_blank">
+            <i class="fa fa-github-alt" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+
     </div>
+
+
+    <!-- scripts -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
